--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <script>
       const hideFullScreenButton = "true";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/Webgl2.loader.js";
+      const loaderUrl = buildUrl + "/Webgl.loader.js";
       const config = {
-        dataUrl: buildUrl + "/Webgl2.data",
-        frameworkUrl: buildUrl + "/Webgl2.framework.js",
-        codeUrl: buildUrl + "/Webgl2.wasm",
+        dataUrl: buildUrl + "/Webgl.data",
+        frameworkUrl: buildUrl + "/Webgl.framework.js",
+        codeUrl: buildUrl + "/Webgl.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Katboi01",
         productName: "Fate Animation Viewer",
