--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       loadingCover.style.display = "";
 
       const script = document.createElement("script");
+      var jsUnityInstance = null;
       script.src = loaderUrl;
       script.onload = () => {
         createUnityInstance(canvas, config, (progress) => {
@@ -81,6 +82,7 @@
           progressBarEmpty.style.display = "";
           progressBarFull.style.width = `${100 * progress}%`;
         }).then((unityInstance) => {
+          jsUnityInstance = unityInstance;
           loadingCover.style.display = "none";
           if (canFullscreen) {
             if (!hideFullScreenButton) {
