Model format update
removed external texture loading
added discord link

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         frameworkUrl: buildUrl + "/Webgl.framework.js",
         codeUrl: buildUrl + "/Webgl.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "Katboi01",
+        companyName: "Katworks",
         productName: "Fate Animation Viewer",
-        productVersion: "0.1",
+        productVersion: "2.4.2",
       };
 
       const container = document.querySelector("#unity-container");
